// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ImageServiceTry > Example image service try 7`] = `
{
  "asyncImage": [Function],
  "asyncTry": [Function],
  "constrain": [Function],
  "constraints": {
    "format": "jpg",
    "height": 256,
    "maxArea": Infinity,
    "maxHeight": Infinity,
    "maxWidth": Infinity,
    "minArea": 0,
    "minHeight": 0,
    "minWidth": 0,
    "profile": null,
    "quality": "default",
    "region": {
      "full": true,
    },
    "rotation": {
      "angle": 0,
    },
    "width": 256,
  },
  "defaultImage": null,
  "didError": false,
  "error": null,
  "fallback": null,
  "features": {
    "cors": false,
    "corsVerified": false,
    "sizeByH": false,
    "sizeByW": false,
    "sizeByWh": false,
    "sizeByWhListed": true,
  },
  "formats": [
    "jpg",
  ],
  "fullService": null,
  "fullTiles": [],
  "generateImageUrlAtSize": [Function],
  "image": [Function],
  "imageServer": {
    "path": "thumbs/7/18/9a4356aa-2953-4ce8-9b94-ec8b10bf7921/info.json",
    "prefix": "",
    "scheme": "https",
    "server": "dlc.services",
  },
  "imageServiceInfoJson": "https://dlc.services/thumbs/7/18/9a4356aa-2953-4ce8-9b94-ec8b10bf7921/info.json",
  "ingestImageService": [Function],
  "isFullyLoaded": false,
  "isLoading": false,
  "level": 0,
  "maxArea": Infinity,
  "maxHeight": 683,
  "maxWidth": 1024,
  "options": {
    "cors": false,
    "headers": {},
    "placeholder": null,
    "rounding": "ceil",
    "sizePriority": "largest-size",
    "stitch": false,
    "unsafe": true,
  },
  "originalService": {
    "@context": "http://iiif.io/api/image/2/context.json",
    "@id": "https://dlc.services/thumbs/7/18/9a4356aa-2953-4ce8-9b94-ec8b10bf7921",
    "@type": "iiif:Image",
    "height": 683,
    "profile": [
      "http://iiif.io/api/image/2/level0.json",
      {
        "formats": [
          "jpg",
        ],
        "qualities": [
          "color",
        ],
        "supports": [
          "sizeByWhListed",
        ],
      },
    ],
    "protocol": "http://iiif.io/api/image",
    "sizes": [
      {
        "height": 67,
        "width": 100,
      },
      {
        "height": 133,
        "width": 200,
      },
      {
        "height": 267,
        "width": 400,
      },
      {
        "height": 683,
        "width": 1024,
      },
    ],
    "width": 1024,
  },
  "qualities": [
    "default",
  ],
  "requestImageService": [Function],
  "sizeByH": [Function],
  "sizeByW": [Function],
  "sizeByWh": [Function],
  "sizeByWhListed": [Function],
  "sizes": [
    {
      "height": 67,
      "width": 100,
    },
    {
      "height": 133,
      "width": 200,
    },
    {
      "height": 267,
      "width": 400,
    },
    {
      "height": 683,
      "width": 1024,
    },
  ],
  "supportsArbitrarySizes": false,
  "supportsSizeByWhListed": false,
  "test": [Function],
  "tileSizes": [],
  "tiles": undefined,
  "try": [Function],
  "tryCursor": 1,
  "tryQueue": [
    {
      "constraints": {
        "height": 267,
        "minWidth": 100000,
      },
      "error": "Unknown error (2)",
      "id": null,
      "isAsync": false,
      "isError": true,
      "isFetching": false,
      "isVerified": false,
      "isVerifying": false,
    },
    {
      "constraints": {
        "height": 267,
        "width": 400,
      },
      "error": null,
      "id": "https://dlc.services/thumbs/7/18/9a4356aa-2953-4ce8-9b94-ec8b10bf7921/full/400,/0/default.jpg",
      "isAsync": false,
      "isError": false,
      "isFetching": false,
      "isVerified": false,
      "isVerifying": false,
    },
    {
      "constraints": {
        "height": 133,
        "width": 200,
      },
      "error": null,
      "id": "https://dlc.services/thumbs/7/18/9a4356aa-2953-4ce8-9b94-ec8b10bf7921/full/200,/0/default.jpg",
      "isAsync": false,
      "isError": false,
      "isFetching": false,
      "isVerified": false,
      "isVerifying": false,
    },
    {
      "constraints": {
        "height": 67,
        "width": 100,
      },
      "error": null,
      "id": "https://dlc.services/thumbs/7/18/9a4356aa-2953-4ce8-9b94-ec8b10bf7921/full/100,/0/default.jpg",
      "isAsync": false,
      "isError": false,
      "isFetching": false,
      "isVerified": false,
      "isVerifying": false,
    },
  ],
  "version": 2,
}
`;

exports[`ImageServiceTry > Fixture - level 0 thumbnail 1`] = `
{
  "asyncImage": [Function],
  "asyncTry": [Function],
  "constrain": [Function],
  "constraints": {
    "format": "jpg",
    "height": 256,
    "maxArea": Infinity,
    "maxHeight": Infinity,
    "maxWidth": Infinity,
    "minArea": 0,
    "minHeight": 0,
    "minWidth": 0,
    "profile": null,
    "quality": "default",
    "region": {
      "full": true,
    },
    "rotation": {
      "angle": 0,
    },
    "width": 256,
  },
  "defaultImage": null,
  "didError": false,
  "error": null,
  "fallback": null,
  "features": {
    "cors": false,
    "corsVerified": false,
    "sizeByH": false,
    "sizeByW": false,
    "sizeByWh": false,
    "sizeByWhListed": true,
  },
  "formats": [
    "jpg",
  ],
  "fullService": null,
  "fullTiles": [],
  "generateImageUrlAtSize": [Function],
  "image": [Function],
  "imageServer": {
    "path": "fixtures/examples/thumbnail/canvas/thum_prop/v2/canvas_thum_level0/titlepage1_verso/info.json",
    "prefix": "",
    "scheme": "https",
    "server": "iiif-commons.github.io",
  },
  "imageServiceInfoJson": "https://iiif-commons.github.io/fixtures/examples/thumbnail/canvas/thum_prop/v2/canvas_thum_level0/titlepage1_verso/info.json",
  "ingestImageService": [Function],
  "isFullyLoaded": false,
  "isLoading": false,
  "level": 0,
  "maxArea": Infinity,
  "maxHeight": 7230,
  "maxWidth": 5428,
  "options": {
    "cors": false,
    "headers": {},
    "placeholder": null,
    "rounding": "ceil",
    "sizePriority": "largest-size",
    "stitch": false,
    "unsafe": true,
  },
  "originalService": {
    "@context": "http://iiif.io/api/image/2/context.json",
    "@id": "https://iiif-commons.github.io/fixtures/examples/thumbnail/canvas/thum_prop/v2/canvas_thum_level0/titlepage1_verso",
    "height": 7230,
    "profile": "http://iiif.io/api/image/2/level0.json",
    "protocol": "http://iiif.io/api/image",
    "sizes": [
      {
        "height": 226,
        "width": 170,
      },
      {
        "height": 452,
        "width": 340,
      },
      {
        "height": 904,
        "width": 679,
      },
      {
        "height": 1808,
        "width": 1357,
      },
      {
        "height": 3615,
        "width": 2714,
      },
      {
        "height": 7230,
        "width": 5428,
      },
    ],
    "width": 5428,
  },
  "qualities": [
    "default",
  ],
  "requestImageService": [Function],
  "sizeByH": [Function],
  "sizeByW": [Function],
  "sizeByWh": [Function],
  "sizeByWhListed": [Function],
  "sizes": [
    {
      "height": 226,
      "width": 170,
    },
    {
      "height": 452,
      "width": 340,
    },
    {
      "height": 904,
      "width": 679,
    },
    {
      "height": 1808,
      "width": 1357,
    },
    {
      "height": 3615,
      "width": 2714,
    },
    {
      "height": 7230,
      "width": 5428,
    },
  ],
  "supportsArbitrarySizes": false,
  "supportsSizeByWhListed": false,
  "test": [Function],
  "tileSizes": [],
  "tiles": undefined,
  "try": [Function],
  "tryCursor": -1,
  "tryQueue": [],
  "version": 2,
}
`;

exports[`ImageServiceTry > Fixture - level 0, no thumbnail 3`] = `
{
  "asyncImage": [Function],
  "asyncTry": [Function],
  "constrain": [Function],
  "constraints": {
    "format": "jpg",
    "height": 256,
    "maxArea": Infinity,
    "maxHeight": Infinity,
    "maxWidth": Infinity,
    "minArea": 0,
    "minHeight": 0,
    "minWidth": 0,
    "profile": null,
    "quality": "default",
    "region": {
      "full": true,
    },
    "rotation": {
      "angle": 0,
    },
    "width": 256,
  },
  "defaultImage": null,
  "didError": false,
  "error": null,
  "fallback": null,
  "features": {
    "cors": false,
    "corsVerified": false,
    "sizeByH": false,
    "sizeByW": false,
    "sizeByWh": false,
    "sizeByWhListed": true,
  },
  "formats": [
    "jpg",
  ],
  "fullService": null,
  "fullTiles": [
    {
      "height": 95,
      "scale": 32,
      "width": 126,
    },
    {
      "height": 189,
      "scale": 16,
      "width": 252,
    },
    {
      "height": 378,
      "scale": 8,
      "width": 504,
    },
    {
      "height": 756,
      "scale": 4,
      "width": 1008,
    },
  ],
  "generateImageUrlAtSize": [Function],
  "image": [Function],
  "imageServer": {
    "path": "fixtures/examples/thumbnail/canvas/no_thum_prop/v2/level0/tractor/info.json",
    "prefix": "",
    "scheme": "https",
    "server": "iiif-commons.github.io",
  },
  "imageServiceInfoJson": "https://iiif-commons.github.io/fixtures/examples/thumbnail/canvas/no_thum_prop/v2/level0/tractor/info.json",
  "ingestImageService": [Function],
  "isFullyLoaded": false,
  "isLoading": false,
  "level": 0,
  "maxArea": Infinity,
  "maxHeight": 3023,
  "maxWidth": 4031,
  "options": {
    "cors": false,
    "headers": {},
    "placeholder": null,
    "rounding": "ceil",
    "sizePriority": "largest-size",
    "stitch": false,
    "unsafe": true,
  },
  "originalService": {
    "@context": "http://iiif.io/api/image/2/context.json",
    "@id": "https://iiif-commons.github.io/fixtures/examples/thumbnail/canvas/no_thum_prop/v2/level0/tractor",
    "profile": "http://iiif.io/api/image/2/level0.json",
  },
  "qualities": [
    "default",
  ],
  "requestImageService": [Function],
  "sizeByH": [Function],
  "sizeByW": [Function],
  "sizeByWh": [Function],
  "sizeByWhListed": [Function],
  "sizes": [
    {
      "height": 95,
      "width": 126,
    },
    {
      "height": 189,
      "width": 252,
    },
    {
      "height": 378,
      "width": 504,
    },
    {
      "height": 756,
      "width": 1008,
    },
    {
      "height": 1512,
      "width": 2016,
    },
    {
      "height": 3023,
      "width": 4031,
    },
  ],
  "supportsArbitrarySizes": false,
  "supportsSizeByWhListed": false,
  "test": [Function],
  "tileSizes": [
    1024,
  ],
  "tiles": [
    {
      "height": 1024,
      "scaleFactors": [
        32,
        16,
        8,
        4,
        2,
        1,
      ],
      "width": 1024,
    },
  ],
  "try": [Function],
  "tryCursor": -1,
  "tryQueue": [],
  "version": 2,
}
`;

exports[`ImageServiceTry > Situation with thumbnail where we only have a string 2`] = `
{
  "asyncImage": [Function],
  "asyncTry": [Function],
  "constrain": [Function],
  "constraints": {
    "format": "jpg",
    "height": 256,
    "maxArea": Infinity,
    "maxHeight": Infinity,
    "maxWidth": Infinity,
    "minArea": 0,
    "minHeight": 0,
    "minWidth": 0,
    "profile": null,
    "quality": "default",
    "region": {
      "full": true,
    },
    "rotation": {
      "angle": 0,
    },
    "width": 256,
  },
  "defaultImage": null,
  "didError": false,
  "error": null,
  "fallback": null,
  "features": {
    "cors": false,
    "corsVerified": false,
    "sizeByH": false,
    "sizeByW": false,
    "sizeByWh": false,
    "sizeByWhListed": true,
  },
  "formats": [
    "jpg",
  ],
  "fullService": null,
  "fullTiles": [],
  "generateImageUrlAtSize": [Function],
  "image": [Function],
  "imageServer": {
    "path": "api/image/2.1/example/reference/15f769d62ca9a3a2deca390efed75d73-4_titlepage1_verso/info.json",
    "prefix": "",
    "scheme": "https",
    "server": "iiif.io",
  },
  "imageServiceInfoJson": "https://iiif.io/api/image/2.1/example/reference/15f769d62ca9a3a2deca390efed75d73-4_titlepage1_verso/info.json",
  "ingestImageService": [Function],
  "isFullyLoaded": false,
  "isLoading": false,
  "level": 0,
  "maxArea": Infinity,
  "maxHeight": Infinity,
  "maxWidth": Infinity,
  "options": {
    "cors": false,
    "headers": {},
    "placeholder": null,
    "rounding": "ceil",
    "sizePriority": "largest-size",
    "stitch": false,
    "unsafe": true,
  },
  "originalService": {
    "@context": "http://iiif.io/api/image/2/context.json",
    "@id": "https://iiif.io/api/image/2.1/example/reference/15f769d62ca9a3a2deca390efed75d73-4_titlepage1_verso",
    "@type": "ImageService2",
    "profile": "http://iiif.io/api/image/2/level0.json",
    "protocol": "http://iiif.io/api/image",
    "sizes": [
      {
        "height": 682,
        "width": 512,
      },
    ],
  },
  "qualities": [
    "default",
  ],
  "requestImageService": [Function],
  "sizeByH": [Function],
  "sizeByW": [Function],
  "sizeByWh": [Function],
  "sizeByWhListed": [Function],
  "sizes": [
    {
      "height": 682,
      "width": 512,
    },
  ],
  "supportsArbitrarySizes": false,
  "supportsSizeByWhListed": false,
  "test": [Function],
  "tileSizes": [],
  "tiles": undefined,
  "try": [Function],
  "tryCursor": -1,
  "tryQueue": [],
  "version": 2,
}
`;

exports[`ImageServiceTry > Situation with thumbnail where we only have a string 3`] = `
{
  "asyncImage": [Function],
  "asyncTry": [Function],
  "constrain": [Function],
  "constraints": {
    "format": "jpg",
    "height": 256,
    "maxArea": Infinity,
    "maxHeight": Infinity,
    "maxWidth": Infinity,
    "minArea": 0,
    "minHeight": 0,
    "minWidth": 0,
    "profile": null,
    "quality": "default",
    "region": {
      "full": true,
    },
    "rotation": {
      "angle": 0,
    },
    "width": 256,
  },
  "defaultImage": null,
  "didError": false,
  "error": null,
  "fallback": null,
  "features": {
    "cors": true,
    "corsVerified": false,
    "sizeByH": true,
    "sizeByW": true,
    "sizeByWh": true,
    "sizeByWhListed": true,
  },
  "formats": [
    "jpg",
  ],
  "fullService": null,
  "fullTiles": [],
  "generateImageUrlAtSize": [Function],
  "image": [Function],
  "imageServer": {
    "path": "api/image/2.1/example/reference/15f769d62ca9a3a2deca390efed75d73-4_titlepage1_verso/info.json",
    "prefix": "",
    "scheme": "https",
    "server": "iiif.io",
  },
  "imageServiceInfoJson": "https://iiif.io/api/image/2.1/example/reference/15f769d62ca9a3a2deca390efed75d73-4_titlepage1_verso/info.json",
  "ingestImageService": [Function],
  "isFullyLoaded": false,
  "isLoading": false,
  "level": 1,
  "maxArea": Infinity,
  "maxHeight": 7230,
  "maxWidth": 5428,
  "options": {
    "cors": false,
    "headers": {},
    "placeholder": null,
    "rounding": "ceil",
    "sizePriority": "largest-size",
    "stitch": false,
    "unsafe": true,
  },
  "originalService": {
    "@context": "http://iiif.io/api/image/2/context.json",
    "@id": "https://iiif.io/api/image/2.1/example/reference/15f769d62ca9a3a2deca390efed75d73-4_titlepage1_verso",
    "@type": "ImageService2",
    "profile": "http://iiif.io/api/image/2/level0.json",
    "protocol": "http://iiif.io/api/image",
    "sizes": [
      {
        "height": 682,
        "width": 512,
      },
    ],
  },
  "qualities": [
    "default",
  ],
  "requestImageService": [Function],
  "sizeByH": [Function],
  "sizeByW": [Function],
  "sizeByWh": [Function],
  "sizeByWhListed": [Function],
  "sizes": undefined,
  "supportsArbitrarySizes": false,
  "supportsSizeByWhListed": false,
  "test": [Function],
  "tileSizes": [
    512,
  ],
  "tiles": [
    {
      "height": 512,
      "scaleFactors": [
        1,
        2,
        4,
        8,
      ],
      "width": 512,
    },
  ],
  "try": [Function],
  "tryCursor": -1,
  "tryQueue": [],
  "version": 2,
}
`;

exports[`ImageServiceTry > nls example 2`] = `
{
  "asyncImage": [Function],
  "asyncTry": [Function],
  "constrain": [Function],
  "constraints": {
    "format": "jpg",
    "height": 256,
    "maxArea": Infinity,
    "maxHeight": Infinity,
    "maxWidth": Infinity,
    "minArea": 0,
    "minHeight": 0,
    "minWidth": 0,
    "profile": null,
    "quality": "default",
    "region": {
      "full": true,
    },
    "rotation": {
      "angle": 0,
    },
    "width": 256,
  },
  "defaultImage": null,
  "didError": false,
  "error": null,
  "fallback": null,
  "features": {
    "cors": true,
    "corsVerified": false,
    "sizeByH": true,
    "sizeByW": true,
    "sizeByWh": true,
    "sizeByWhListed": true,
  },
  "formats": [
    "jpg",
  ],
  "fullService": null,
  "fullTiles": [
    {
      "height": 112,
      "scale": 16,
      "width": 157,
    },
  ],
  "generateImageUrlAtSize": [Function],
  "image": [Function],
  "imageServer": {
    "path": "iiif/7443/74438559.5/info.json",
    "prefix": "",
    "scheme": "https",
    "server": "view.nls.uk",
  },
  "imageServiceInfoJson": "https://view.nls.uk/iiif/7443/74438559.5/info.json",
  "ingestImageService": [Function],
  "isFullyLoaded": false,
  "isLoading": false,
  "level": 1,
  "maxArea": Infinity,
  "maxHeight": 1778,
  "maxWidth": 2500,
  "options": {
    "cors": false,
    "headers": {},
    "placeholder": null,
    "rounding": "ceil",
    "sizePriority": "largest-size",
    "stitch": false,
    "unsafe": true,
  },
  "originalService": {
    "@context": "http://iiif.io/api/image/2/context.json",
    "@id": "https://view.nls.uk/iiif/7443/74438559.5",
    "height": 1781,
    "profile": "http://iiif.io/api/image/2/profiles/level2.json",
    "width": 2500,
  },
  "qualities": [
    "default",
  ],
  "requestImageService": [Function],
  "sizeByH": [Function],
  "sizeByW": [Function],
  "sizeByWh": [Function],
  "sizeByWhListed": [Function],
  "sizes": undefined,
  "supportsArbitrarySizes": false,
  "supportsSizeByWhListed": false,
  "test": [Function],
  "tileSizes": [
    256,
  ],
  "tiles": [
    {
      "height": 256,
      "scaleFactors": [
        1,
        2,
        4,
        8,
        16,
      ],
      "width": 256,
    },
  ],
  "try": [Function],
  "tryCursor": -1,
  "tryQueue": [],
  "version": 2,
}
`;
